@@ -394,6 +394,7 @@ All (GUI):
 - Added long version field to wxAboutDialogInfo (Jeff Tupper).
 - Added wxWindow::CanScroll() behaving like the old HasScrollbar() and made
   HasScrollbar() really check for the scrollbar existence.
+- Added wxKeyEvent::IsKeyInCategory() (Jeff Tupper).
 
 GTK:
 
